# Manipolatore-RRP

./: .gitignore  CMakeLists.txt  README.md  appunti.md  inverseKinematics.py  package.xml  symbolicInverse.md  symbolicInverse.py
config/: robotParameters.yaml
launch/: manipolatoreRRP.launch
scriptAusiliari/: computeDetJ.py  worspacePrinter.py
scripts/: directKinematics.py  inverseKinematics.py  jointController.py  kinematicsUtils.py  tfPrinter.py
urdf/: manipolatoreRRP.urdf.xacro
